--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -6,17 +6,19 @@
 {% block content %}
     
 
-
 <h1>Home Page</h1>
 
 {% if request.user.is_authenticated %}
+<div class="main"> 
 <h3>Welcome {{ user.socialaccount_set.all.0.extra_data.name| title }}</h3>
+<img  class="image" src= "{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="">
+</div>
 {% else %}
 <h2>Welcome Guest!</h2>
 {% endif %}
 
 
 
-<img src= "{{ user.socialaccount_set.all.0.get_avatar_url }}" alt="">
+
 
 {% endblock content %}
